[media/sdoc-editor] updated the content(icons, i18n/l10n)

--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -1,6 +1,8 @@
 {
   "bold": "Bold",
   "italic": "Italic",
+  "underline": "Underline",
+  "strikethrough": "Strikethrough",
   "inline_code": "Code",
   "header_one": "Heading 1",
   "header_two": "Heading 2",
@@ -32,17 +34,12 @@
   "switch_to_rich_text_editor": "Switch to Rich Text Editor",
   "switch_to_viewer": "Switch to Markdown Viewer",
   "help": "Help",
-  "remove_table": "Remove Table",
+  "Remove_table": "Remove table",
   "column": "Column",
   "row": "Row",
-  "Insert_Row_Before": "Insert Row Before",
-  "Insert_Row_After": "Insert Row After",
-  "Insert_Column_Before": "Insert Column Before",
-  "Insert_Column_After": "Insert Column After",
-  "Remove_Row": "Remove Row",
-  "Remove_Column": "Remove Column",
-  "Insert_Row": "Insert Row",
-  "Insert_Column": "Insert Column",
+  "Remove_row": "Remove row",
+  "Remove_column": "Remove column",
+  "Insert_row": "Insert row",
   "set_align": "Set align",
   "left": "Left",
   "center": "Center",
@@ -243,6 +240,12 @@
   "Customize_the_number_of_rows_and_columns": "Customize the number of rows and columns",
   "Rows": "Rows",
   "Columns": "Columns",
-  "Please_enter_the_title": "Please enter the title",
-  "Please_enter_the_text": "Please enter the text"
+  "Please_enter_title": "Please enter title",
+  "Please_enter_text": "Please enter text",
+  "row(s)": "row(s)",
+  "column(s)": "column(s)",
+  "Insert_below": "Insert below",
+  "Insert_above": "Insert above",
+  "Insert_on_the_right": "Insert on the right",
+  "Insert_on_the_left": "Insert on the left"
 }
