update sdoc version

--- a/media/sdoc-editor/locales/cs/sdoc-editor.json
+++ b/media/sdoc-editor/locales/cs/sdoc-editor.json
@@ -29,7 +29,7 @@
   "switch_to_rich_text_editor": "Přepnout do rozšířeného textového editoru",
   "switch_to_viewer": "Přepnout do značkovacího prohlížeče",
   "help": "Pomoc",
-  "remove_table": "Odebrat tabulku",
+  "Remove_table": "Odebrat tabulku",
   "column": "Sloupec",
   "row": "Řádek",
   "set_align": "Nastavit zarovnání",
