--- a/media/sdoc-editor/locales/de/sdoc-editor.json
+++ b/media/sdoc-editor/locales/de/sdoc-editor.json
@@ -29,7 +29,7 @@
   "switch_to_rich_text_editor": "Zum Editor mit Formatierungen wechseln",
   "switch_to_viewer": "Zur Markdown-Vorschau wechseln",
   "help": "Hilfe",
-  "remove_table": "Tabelle entfernen",
+  "Remove_table": "Tabelle entfernen",
   "column": "Spalte",
   "row": "Zeile",
   "set_align": "Ausrichtung festlegen",
