--- a/media/sdoc-editor/locales/fr/sdoc-editor.json
+++ b/media/sdoc-editor/locales/fr/sdoc-editor.json
@@ -29,7 +29,7 @@
   "switch_to_rich_text_editor": "Basculer en éditeur de texte riche",
   "switch_to_viewer": "Basculer en visualiseur Markdown",
   "help": "Aide",
-  "remove_table": "Supprimer la table",
+  "Remove_table": "Supprimer la table",
   "column": "Colonne",
   "row": "Ligne",
   "set_align": "Ajuster l'alignement",
