--- a/media/sdoc-editor/locales/it/sdoc-editor.json
+++ b/media/sdoc-editor/locales/it/sdoc-editor.json
@@ -29,7 +29,7 @@
   "switch_to_rich_text_editor": "Passa all'Editor di testo formattato",
   "switch_to_viewer": "Passa alla vista di tipo Markdown",
   "help": "Aiuto",
-  "remove_table": "Rimuovere Tabella",
+  "Remove_table": "Rimuovere Tabella",
   "column": "Colonna",
   "row": "Riga",
   "set_align": "Imposta allineamento",
