--- a/media/sdoc-editor/locales/ru/sdoc-editor.json
+++ b/media/sdoc-editor/locales/ru/sdoc-editor.json
@@ -29,7 +29,7 @@
   "switch_to_rich_text_editor": "Переключиться на визуальный редактор",
   "switch_to_viewer": "Переключиться на просмотр Markdown",
   "help": "Помощь",
-  "remove_table": "Удалить таблицу",
+  "Remove_table": "Удалить таблицу",
   "column": "Столбец",
   "row": "Строка",
   "set_align": "Установить выравнивание",
