--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -1,123 +1,122 @@
 {
-  "bold": "Bold",
-  "italic": "Italic",
-  "underline": "Underline",
-  "strikethrough": "Strikethrough",
-  "inline_code": "Code",
-  "header_one": "Heading 1",
-  "header_two": "Heading 2",
-  "header_three": "Heading 3",
-  "header_four": "Heading 4",
-  "header_five": "Heading 5",
-  "header_six": "Heading 6",
-  "paragraph": "Paragraph",
-  "quote": "Quote",
-  "ordered_list": "Ordered List",
-  "unordered_list": "Unordered List",
-  "check_list_item": "Check List Item",
-  "insert_image": "Insert Image",
-  "insert_formula": "Insert Formula",
-  "formula": "Formula",
-  "insert_file": "Insert File",
-  "code": "Inline Code",
-  "code_block": "Code Block",
-  "insert_link": "Insert link",
-  "insert_table": "Insert Table",
-  "save": "Save",
-  "more": "More",
-  "invalid_url": "Invalid URL",
-  "link_address": "Link address",
-  "image_address": "Image address",
-  "submit": "Submit",
-  "cancel": "Cancel",
-  "switch_to_plain_text_editor": "Switch to Plain Text Editor",
-  "switch_to_rich_text_editor": "Switch to Rich Text Editor",
-  "switch_to_viewer": "Switch to Markdown Viewer",
-  "help": "Help",
-  "Remove_table": "Remove table",
-  "column": "Column",
-  "row": "Row",
-  "Remove_row": "Remove row",
-  "Remove_column": "Remove column",
+  "Bold": "Bold",
+  "Italic": "Italic",
+  "Underline": "Underline",
+  "Strikethrough": "Strikethrough",
+  "Inline_code": "Code",
+  "Header_one": "Heading 1",
+  "Header_two": "Heading 2",
+  "Header_three": "Heading 3",
+  "Header_four": "Heading 4",
+  "Header_five": "Heading 5",
+  "Header_six": "Heading 6",
+  "Paragraph": "Paragraph",
+  "Quote": "Quote",
+  "Ordered_list": "Ordered list",
+  "Unordered_list": "Unordered list",
+  "Check_list_item": "Check list item",
+  "Insert_image": "Insert image",
+  "Insert_formula": "Insert formula",
+  "Formula": "Formula",
+  "Insert_file": "Insert file",
+  "Code": "Inline code",
+  "Code_block": "Code block",
+  "Insert_link": "Insert link",
+  "Insert_table": "Insert table",
+  "Save": "Save",
+  "More": "More",
+  "Invalid_url": "Invalid URL",
+  "Link_address": "Link address",
+  "Image_address": "Image address",
+  "Submit": "Submit",
+  "Cancel": "Cancel",
+  "Switch_to_plain_text_editor": "Switch to Plain Text Editor",
+  "Switch_to_rich_text_editor": "Switch to Rich Text Editor",
+  "Switch_to_viewer": "Switch to Markdown Viewer",
+  "Help": "Help",
+  "Column": "Column",
+  "Row": "Row",
+  "Delete_table": "Delete table",
+  "Delete_row": "Delete row",
+  "Delete_column": "Delete column",
   "Insert_row": "Insert row",
-  "set_align": "Set align",
-  "left": "Left",
-  "center": "Center",
-  "right": "Right",
-  "file_saved": "File saved.",
-  "file_failed_to_save": "File failed to save.",
-  "star": "Add star",
-  "unstar": "Remove star",
-  "back_to_parent_directory":"Back to parent directory",
-  "edit": "Edit",
-  "copy": "Copy",
-  "copied": "Copied",
-  "internal_link": "Internal Link",
-  "copy_internal_link": "Internal link has been copied to clipboard",
-  "internal_link_desc": "An internal link is a link to a file or folder that can be accessed by users with read permission to the file or folder.",
-  "share": "Share",
-  "share_link": "Share Link",
-  "generate": "Generate",
-  "add_password_protection": "Add password protection",
-  "password": "Password",
-  "at_least_8_characters": "at least 8 characters",
-  "password_again": "Password again",
-  "add_auto_expiration": "Add auto expiration",
-  "days": "days",
-  "please_enter_password": "Please enter password",
-  "greater_than_or_equal_to": "Greater than or equal to",
-  "less_than_or_equal_to": "Less than or equal to",
-  "set_permission": "Set permission",
-  "preview_and_download": "Preview and download",
-  "preview_only": "Preview only",
-  "please_enter_valid_days": "Please enter valid days",
-  "please_enter_a_non-negative_integer": "Please enter a non-negative integer",
-  "please_enter_days": "Please enter days",
-  "password_is_too_short": "Password is too short",
-  "passwords_do_not_match": "Passwords do not match",
-  "return_to_wiki_page": "Return to Wiki Page",
-  "insert_network_image": "Insert network image",
-  "upload_local_image": "Upload local image",
-  "add_link": "Add link",
-  "file_history": "File History",
-  "history_version": "History Versions",
-  "back_to_viewer": "Back To Viewer",
-  "link_title": "Link title",
-  "local_draft": "Local draft",
-  "use_draft": "Use draft",
-  "delete_draft": "Delete draft",
-  "you_have_an_unsaved_draft_do_you_like_to_use_it": "You have an unsaved draft. Do you like to use it?",
-  "local_draft_saved": "Local draft saved",
-  "new_draft": "New Draft",
-  "view_draft": "View Draft",
-  "publish": "Publish",
-  "this_file_has_a_draft": "This file has a draft.", 
-  "delete": "Delete",
-  "comments": "Comments",
-  "add_a_comment": "Add a comment...",
-  "no_comment_yet": "No comment yet.",
+  "Insert_column": "Insert column",
+  "Set_align": "Set align",
+  "Left": "Left",
+  "Center": "Center",
+  "Right": "Right",
+  "File_saved": "File saved.",
+  "File_failed_to_save": "File failed to save.",
+  "Back_to_parent_directory":"Back to parent directory",
+  "Edit": "Edit",
+  "Copy": "Copy",
+  "Copied": "Copied",
+  "Internal_link": "Internal link",
+  "Copy_internal_link": "Internal link has been copied to clipboard",
+  "Internal_link_desc": "An internal link is a link to a file or folder that can be accessed by users with read permission to the file or folder.",
+  "Share": "Share",
+  "Share_link": "Share link",
+  "Generate": "Generate",
+  "Add_password_protection": "Add password protection",
+  "Password": "Password",
+  "At_least_8_characters": "at least 8 characters",
+  "Password_again": "Password again",
+  "Add_auto_expiration": "Add auto expiration",
+  "Days": "days",
+  "Please_enter_password": "Please enter password",
+  "Greater_than_or_equal_to": "Greater than or equal to",
+  "Less_than_or_equal_to": "Less than or equal to",
+  "Set_permission": "Set permission",
+  "Preview_and_download": "Preview and download",
+  "Preview_only": "Preview only",
+  "Please_enter_valid_days": "Please enter valid days",
+  "Please_enter_a_non-negative_integer": "Please enter a non-negative integer",
+  "Please_enter_days": "Please enter days",
+  "Password_is_too_short": "Password is too short",
+  "Passwords_do_not_match": "Passwords do not match",
+  "Return_to_wiki_page": "Return to Wiki Page",
+  "Insert_network_image": "Insert network image",
+  "Upload_local_image": "Upload local image",
+  "Add_link": "Add link",
+  "File_history": "File history",
+  "History_version": "History versions",
+  "Back_to_viewer": "Back to viewer",
+  "Link_title": "Link title",
+  "Local_draft": "Local draft",
+  "Use_draft": "Use draft",
+  "Delete_draft": "Delete draft",
+  "You_have_an_unsaved_draft_do_you_like_to_use_it": "You have an unsaved draft. Do you like to use it?",
+  "Local_draft_saved": "Local draft saved",
+  "New_draft": "New draft",
+  "View_draft": "View draft",
+  "Publish": "Publish",
+  "This_file_has_a_draft": "This file has a draft.", 
+  "Delete": "Delete",
+  "Comments": "Comments",
+  "Add_a_comment": "Add a comment...",
+  "No_comment_yet": "No comment yet.",
   "Mark_as_Resolved": "Mark as Resolved",
-  "ask_for_review": "Ask for review",
-  "review_already_exists": "Review already exists",
-  "view_review": "View review",
-  "there_is_an_associated_review_with_this_file": "There is an associated review with this file.",
-  "start_review": "Start Review",
-  "this_file_is_in_draft_stage": "This file is in draft stage.",
-  "this_file_is_in_review_stage": "This file is in review stage.",
-  "this_file_has_been_updated": "This file has been updated.",
-  "refresh": "Refresh",
-  "related_files": "related files",
-  "related_file": "related file",
-  "no_tags": "No tags",
+  "Ask_for_review": "Ask for review",
+  "Review_already_exists": "Review already exists",
+  "View_review": "View review",
+  "There_is_an_associated_review_with_this_file": "There is an associated review with this file.",
+  "Start_review": "Start Review",
+  "This_file_is_in_draft_stage": "This file is in draft stage.",
+  "This_file_is_in_review_stage": "This file is in review stage.",
+  "This_file_has_been_updated": "This file has been updated.",
+  "Refresh": "Refresh",
+  "Related_files": "Related files",
+  "Related_file": "Related file",
+  "No_tags": "No tags",
   "Date": "Date",
   "Participants": "Participants",
   "Meeting_note": "Meeting note",
   "Chooser_document_type": "Chooser document type",
   "Empty": "Empty",
-  "no_related_files": "No related files",
-  "no_out_line": "No outline",
+  "No_related_files": "No related files",
+  "No_out_line": "No outline",
   "Editing_files_in_this_browser_can_lead_to_slight_display_problems": "Editing files in this browser can lead to slight display problems.",
-  "no_document_improvement_suggestion": "No document improvement suggestion",
+  "No_document_improvement_suggestion": "No document improvement suggestion",
   "Hide_side_panel": "Hide side panel",
   "Show_side_panel": "Show side panel",
   "Show_resolved_comments": "Show resolved comments",
@@ -128,12 +127,11 @@
   "Insert_library_image": "Insert library image",
   "Size": "Size",
   "Location": "Location",
-  "Last_Update": "Last Update",
+  "Last_update": "Last update",
   "Tags": "Tags",
-  "Related_Files": "Related Files",
   "Add_participants": "Add participants",
   "Clear_format": "Clear format",
-  "markdownLint": {
+  "MarkdownLint": {
     "missing_h1": {
       "description": "There is no h1 in the document",
       "issue" : "Missing h1"
@@ -148,7 +146,7 @@
     }
   },
   "Shortcut_help": "Shortcut help",
-  "userHelp": {
+  "User_help": {
     "title": "Keyboard shortcuts",
     "userHelpData": [
       {
@@ -217,9 +215,6 @@
       }
     ]
   },
-  "Select_field": "Select field",
-  "Font_style": "Font style",
-  "Insert_column": "Insert column",
   "The_link_address_is_required": "The link address is required.",
   "The_link_title_is_required": "The link title is required.",
   "The_link_address_is_invalid": "The link address is invalid, please enter a correct connection address.",
@@ -227,25 +222,33 @@
   "Saving": "Saving...",
   "Collaborators": "Collaborators",
   "Online_members": "Online members",
-  "me": "me",
+  "Me": "me",
   "Server_is_not_connected_Operation_will_be_sent_to_server_later": "Server is not connected. Operation will be sent to server later.",
   "Server_is_disconnected_Reconnecting": "Server is disconnected. Reconnecting...",
   "Server_is_reconnected": "Server is reconnected.",
   "Outline": "Outline",
   "Headings_you_add_to_the_document_will_appear_here": "Headings you add to the document will appear here",
   "Open_parent_folder": "Open parent folder",
-  "redo": "redo",
-  "undo": "undo",
+  "Redo": "redo",
+  "Undo": "undo",
   "Open_link": "Open link",
   "Customize_the_number_of_rows_and_columns": "Customize the number of rows and columns",
   "Rows": "Rows",
   "Columns": "Columns",
   "Please_enter_title": "Please enter title",
   "Please_enter_text": "Please enter text",
-  "row(s)": "row(s)",
-  "column(s)": "column(s)",
+  "Row(s)": "row(s)",
+  "Column(s)": "column(s)",
   "Insert_below": "Insert below",
   "Insert_above": "Insert above",
   "Insert_on_the_right": "Insert on the right",
-  "Insert_on_the_left": "Insert on the left"
+  "Insert_on_the_left": "Insert on the left",
+  "Starred": "Starred",
+  "Unstarred": "Unstarred",
+  "Star": "Star",
+  "Unstar": "Unstar",
+  "Auto_wrap": "Auto wrap",
+  "Add_comment": "Add comment",
+  "Delete_comment": "Delete comment",
+  "Are_you_sure_to_delete_this_comment": "Are you sure to delete this comment?"
 }
