--- a/media/sdoc-editor/locales/es-MX/sdoc-editor.json
+++ b/media/sdoc-editor/locales/es-MX/sdoc-editor.json
@@ -29,7 +29,7 @@
   "switch_to_rich_text_editor": "Cambiar a editor de texto enriquecido",
   "switch_to_viewer": "Cambiar a visualizador Markdown",
   "help": "Ayuda",
-  "remove_table": "Eliminar tabla",
+  "Remove_table": "Eliminar tabla",
   "column": "Columna",
   "row": "Fila",
   "set_align": "Establecer alineación",
