update sdoc version

--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -3,6 +3,8 @@
   "Italic": "Italic",
   "Underline": "Underline",
   "Strikethrough": "Strikethrough",
+  "Superscript": "Superscript",
+  "Subscript": "Subscript",
   "Inline_code": "Code",
   "Header_one": "Heading 1",
   "Header_two": "Heading 2",
