[media/sdoc-editor] updated i18n/l10n strings for sdoc-editor

--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -258,5 +258,9 @@
   "Revision": "Revision",
   "Error": "Error",
   "Start_revise": "Start revise",
-  "Failed_to_execute_operation_on_server": "Failed to execute operation on server"
+  "Failed_to_execute_operation_on_server": "Failed to execute operation on server",
+  "Start_revise_tip": "Create a temporary document and modify on it, merge it back after reviewing changes",
+  "Load_doc_content_error": "Load doc content error",
+  "Draft": "Draft",
+  "Unmark_as_draft": "Unmark as draft"
 }
