update sdoc version

--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -262,5 +262,48 @@
   "Start_revise_tip": "Create a temporary document and modify on it, merge it back after reviewing changes",
   "Load_doc_content_error": "Load doc content error",
   "Draft": "Draft",
-  "Unmark_as_draft": "Unmark as draft"
+  "Unmark_as_draft": "Unmark as draft",
+  "Background_color": "Background color",
+  "No_color": "No color",
+  "Standard_color": "Standard color",
+  "Recently_used": "Recently used",
+  "More_color": "More color",
+  "White": "White",
+  "Black": "Black",
+  "Blue_grey": "Blue_grey",
+  "Blue": "Blue",
+  "Sky_blue": "Sky_blue",
+  "Green": "Green",
+  "Red": "Red",
+  "Orange": "Orange",
+  "Yellow": "Yellow",
+  "Purple": "Purple",
+  "Light_grey_x": "Light grey {{value}}",
+  "Dark_grey_x": "Dark grey {{value}}",
+  "Light_blue_grey_x": "Light blue grey {{value}}",
+  "Light_blue_x": "Light blue {{value}}",
+  "Light_sky_blue_x": "Light sky blue {{value}}",
+  "Light_green_x": "Light green {{value}}",
+  "Light_red_x": "Light red {{value}}",
+  "Light_orange_x": "Light orange {{value}}",
+  "Light_yellow_x": "Light yellow {{value}}",
+  "Light_purple_x": "Light purple {{value}}",
+  "Dark_blue_grey_x": "Dark blue grey {{value}}",
+  "Dark_blue_x": "Dark blue {{value}}",
+  "Dark_sky_blue_x": "Dark sky blue {{value}}",
+  "Dark_green_x": "Dark green {{value}}",
+  "Dark_red_x": "Dark red {{value}}",
+  "Dark_orange_x": "Dark orange {{value}}",
+  "Dark_yellow_x": "Dark yellow {{value}}",
+  "Dark_purple_x": "Dark purple {{value}}",
+  "Standard_dark_red": "Standard dark red",
+  "Standard_red": "Standard red",
+  "Standard_orange": "Standard orange",
+  "Standard_yellow": "Standard yellow",
+  "Standard_light_green": "Standard light green",
+  "Standard_green": "Standard green",
+  "Standard_light_blue": "Standard light blue",
+  "Standard_blue": "Standard blue",
+  "Standard_dark_blue": "Standard dark blue",
+  "Standard_purple": "Standard purple"
 }
