--- a/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
@@ -262,5 +262,48 @@
   "Start_revise_tip": "创建一个临时文档并对其进行修订，检查更改后将其合并回来",
   "Load_doc_content_error": "加载文档内容错误",
   "Draft": "草稿",
-  "Unmark_as_draft": "取消草稿标记"
+  "Unmark_as_draft": "取消草稿标记",
+  "Background_color": "背景色",
+  "No_color": "无颜色",
+  "Standard_color": "标准色",
+  "Recently_used": "最近使用",
+  "More_color": "更多颜色",
+  "White": "白",
+  "Black": "黑",
+  "Blue_grey": "蓝灰",
+  "Blue": "蓝",
+  "Sky_blue": "天蓝",
+  "Green": "绿",
+  "Red": "红",
+  "Orange": "橙",
+  "Yellow": "黄",
+  "Purple": "紫",
+  "Light_grey_x": "浅灰 {{value}}",
+  "Dark_grey_x": "深灰 {{value}}",
+  "Light_blue_grey_x": "浅蓝灰 {{value}}",
+  "Light_blue_x": "浅蓝 {{value}}",
+  "Light_sky_blue_x": "浅天蓝 {{value}}",
+  "Light_green_x": "浅绿 {{value}}",
+  "Light_red_x": "浅红 {{value}}",
+  "Light_orange_x": "浅橙 {{value}}",
+  "Light_yellow_x": "浅黄 {{value}}",
+  "Light_purple_x": "浅紫 {{value}}",
+  "Dark_blue_grey_x": "深蓝灰 {{value}}",
+  "Dark_blue_x": "深蓝 {{value}}",
+  "Dark_sky_blue_x": "深天蓝 {{value}}",
+  "Dark_green_x": "深绿 {{value}}",
+  "Dark_red_x": "深红 {{value}}",
+  "Dark_orange_x": "深橙 {{value}}",
+  "Dark_yellow_x": "深黄 {{value}}",
+  "Dark_purple_x": "深紫 {{value}}",
+  "Standard_dark_red": "标准深红",
+  "Standard_red": "标准红",
+  "Standard_orange": "标准橙",
+  "Standard_yellow": "标准黄",
+  "Standard_light_green": "标准浅绿",
+  "Standard_green": "标准绿",
+  "Standard_light_blue": "标准浅蓝",
+  "Standard_blue": "标准蓝",
+  "Standard_dark_blue": "标准深蓝",
+  "Standard_purple": "标准紫"
 }
