update sdoc version

--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -95,9 +95,16 @@
   "This_file_has_a_draft": "This file has a draft.", 
   "Delete": "Delete",
   "Comments": "Comments",
+  "All_comments": "All comments",
+  "Resolved_comments": "Resolved comments",
+  "Unresolved_comments": "Unresolved comments",
+  "Total_1_comment": "Total 1 comment",
+  "Total_count_comments": "Total {{count}} comments",
   "Add_a_comment": "Add a comment...",
   "No_comment_yet": "No comment yet.",
   "Mark_as_Resolved": "Mark as Resolved",
+  "Resubmit": "Resubmit",
+  "Resubmitted": "Resubmitted",
   "Ask_for_review": "Ask for review",
   "Review_already_exists": "Review already exists",
   "View_review": "View review",
@@ -257,6 +264,7 @@
   "Are_you_sure_to_delete_this_reply": "Are you sure to delete this reply?",
   "Enter_a_comment": "Enter a comment",
   "Enter_a_reply": "Enter a reply",
+  "Reopen_discussion" : "Adding a reply will reopen this discussion",
   "Confirm": "Confirm",
   "View_changes": "View changes",
   "Revision": "Revision",
