--- a/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
@@ -95,9 +95,16 @@
   "This_file_has_a_draft": "这个文件有一个草稿.", 
   "Delete": "删除",
   "Comments": "评论",
+  "All_comments": "所有评论",
+  "Resolved_comments": "已解决评论",
+  "Unresolved_comments": "未解决评论",
+  "Total_1_comment": "共 1 个评论",
+  "Total_count_comments": "共 {{count}} 个评论",
   "Add_a_comment": "增加评论",
   "No_comment_yet": "还没有评论",
   "Mark_as_Resolved": "标记为已解决",
+  "Resubmit": "重新提出",
+  "Resubmitted": "已重新提出",
   "Ask_for_review": "发起评审",
   "Review_already_exists": "评审已存在",
   "View_review": "查看评审",
@@ -257,6 +264,7 @@
   "Are_you_sure_to_delete_this_reply": "你确定要删除这个回复吗?",
   "Enter_a_comment": "输入评论",
   "Enter_a_reply": "输入回复",
+  "Reopen_discussion" : "添加回复会重新提出该讨论",
   "Confirm": "确定",
   "View_changes": "查看改动",
   "Revision": "修订稿",
