update sdoc version

--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -25,6 +25,7 @@
   "Code_block": "Code block",
   "Insert_link": "Insert link",
   "Insert_table": "Insert table",
+  "Valid_values_for_rows_and_columns": "Valid values for the number of rows and columns are 0 to 50",
   "Save": "Save",
   "More": "More",
   "Invalid_url": "Invalid URL",
