--- a/media/sdoc-editor/locales/en/sdoc-editor.json
+++ b/media/sdoc-editor/locales/en/sdoc-editor.json
@@ -339,5 +339,6 @@
   "Reduce_font_size": "Reduce font size",
   "Font": "Font",
   "All_fonts": "All fonts",
-  "Default_font": "Default font"
+  "Default_font": "Default font",
+  "Document_content_load_failed": "Document content failed to load, please refresh the page to try again"
 }
