--- a/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
@@ -341,5 +341,6 @@
   "Reduce_font_size": "减小字号",
   "Font": "字体",
   "All_fonts": "所有字体",
-  "Default_font": "默认字体"
+  "Default_font": "默认字体",
+  "Document_content_load_failed": "文档内容加载失败, 请刷新页面重新访问"
 }
