--- a/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
@@ -342,5 +342,7 @@
   "Font": "字体",
   "All_fonts": "所有字体",
   "Default_font": "默认字体",
-  "Document_content_load_failed": "文档内容加载失败, 请刷新页面重新访问"
+  "Document_content_load_failed": "文档内容加载失败, 请刷新页面重新访问",
+  "Pending_operations_exceed_limit": "有多个操作未同步到服务器。请检查你的网络。",
+  "Recently_saved": "最近保存"
 }
