--- a/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
+++ b/media/sdoc-editor/locales/zh-CN/sdoc-editor.json
@@ -276,6 +276,7 @@
   "Failed_to_execute_operation_on_server": "无法在服务器上执行操作",
   "Start_revise_tip": "创建一个临时文档并对其进行修订，检查更改后将其合并回来",
   "Load_doc_content_error": "加载文档内容错误",
+  "Sdoc_format_invalid": "文档内容不符合 sdoc 规范",
   "Draft": "草稿",
   "Unmark_as_draft": "取消草稿标记",
   "Background_color": "背景色",
